--- a/src/styles/marp.css
+++ b/src/styles/marp.css
@@ -2,7 +2,7 @@
   padding-bottom: 16px;
 }
 
-.marpit svg {
+.marpit > svg {
   margin: 16px auto;
   box-shadow: -1px 4px 6px 2px rgba(0, 0, 0, 0.2);
 }
