--- a/src/styles/marp.css
+++ b/src/styles/marp.css
@@ -6,3 +6,11 @@
   margin: 16px auto;
   box-shadow: -1px 4px 6px 2px rgba(0, 0, 0, 0.2);
 }
+
+.marpit code {
+  padding: 0.2em 0.4em;
+  margin: 0;
+  font-size: 85%;
+  background-color: rgba(27, 31, 35, 0.05);
+  border-radius: 3px;
+}
