--- a/src/styles/markdown.module.css
+++ b/src/styles/markdown.module.css
@@ -427,6 +427,14 @@
   list-style-type: lower-alpha;
 }
 
+.markdown ul {
+  list-style-type: disc;
+}
+
+.markdown ol {
+  list-style-type: decimal;
+}
+
 .markdown dd {
   margin-left: 0;
 }
