--- a/src/styles/marp.module.css
+++ b/src/styles/marp.module.css
@@ -6,3 +6,11 @@
   margin: 16px auto;
   box-shadow: -1px 4px 6px 2px rgba(0, 0, 0, 0.2);
 }
+
+.marpit ul {
+  list-style-type: disc;
+}
+
+.marpit ol {
+  list-style-type: decimal;
+}
