--- a/src/styles/marp.module.css
+++ b/src/styles/marp.module.css
@@ -2,7 +2,7 @@
   padding-bottom: 16px;
 }
 
-.marpit > div > div > svg {
+.marpit svg {
   margin: 16px auto;
   box-shadow: -1px 4px 6px 2px rgba(0, 0, 0, 0.2);
 }
