--- a/app/src/index.css
+++ b/app/src/index.css
@@ -4,15 +4,52 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #d8eefe;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
+  -webkit-text-size-adjust: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 16px;
+  background-color: #f9f9f9;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 10px 10px #d5d9dd;
+  border: solid 4px transparent;
+}
+
+body > iframe {
+  display: none;
+}
+
+svg {
+  width: 100%;
+  height: 100%;
+}
+
+[id*='mermaid-'] {
+  margin: 0 auto;
+}
+
+[id*='mermaid-'] foreignObject {
+  overflow: visible;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+ol {
+  list-style-type: decimal;
 }
