refactor: navigation and sidebar components

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -29,6 +29,10 @@ body {
   border: solid 4px transparent;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
 body > iframe {
   display: none;
 }
